[package]
name = "hyper-proxy"
version = "0.5.0"
authors = ["Johann Tuffe <tafia973@gmail.com>", "Markus Hosch <markus.hosch@gmx.net>"]
description = "A proxy connector for Hyper-based applications"

documentation = "https://docs.rs/hyper-proxy"
repository = "https://github.com/tafia/hyper-proxy"

readme = "README.md"
keywords = ["hyper", "proxy", "tokio", "ssl"]
categories = ["web-programming::http-client", "asynchronous", "authentication"]
license = "MIT"

[dependencies]
hyper = "0.12"
headers = { git = "https://github.com/hyperium/headers.git", version = "0.12" }
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
bytes = "0.4"
tokio-tls = { version = "0.2", optional=true }
hyper-tls = { version = "0.3", optional=true }
native-tls = { version = "0.2", optional=true }

[features]
tls = ["tokio-tls", "hyper-tls", "native-tls"]
default = ["tls"]
